[package]
name = "wallet-daemon"
version = "2.0.3"
edition = "2021"

[profile.release]
debug = true
debug-assertions = true
overflow-checks = true

[dependencies]
tracing = "0.1.41"
rpassword = "7.3.1"
subxt = { version = "0.38.0", features = ["native", "reconnecting-rpc-client"] }
subxt-signer = "0.38.0"
backoff = { version = "0.4", default-features = false, features = ["tokio"] }
backon = "1.3.0"
tokio = { version = "1.42.0", features = [
    "rt",
    "macros",
    "rt-multi-thread",
    "signal",
] }
graphql_client = "0.14.0"
reqwest = { version = "0.12.9", features = ["json"]  }
async-trait = { version = "0.1.83" }
log = "0.4.22"
serde = { version = "1.0.215", default-features = false, features = ["derive"]}
serde_json = "1.0.133"
hex = "0.4.3"
tracing-subscriber = "0.3.19"
config = "0.14.1"
sp-core = { version = "34.0.0", default-features = false, features = [
    "std",
] }
bip39 = { version = "2.0.0", features = ["rand"] }
autoincrement = "1.0.1"
lru = "0.12.5"
anyhow = "1.0.93"
