[package]
name = "wallet-daemon"
version = "2.0.7"
edition = "2021"

[profile.release]
debug = true
debug-assertions = true
overflow-checks = true

[dependencies.openssl-sys]
version = "0.9.103"
features = ["vendored"]
default-features = false

[dependencies]
tracing = "0.1.41"
rpassword = "7.3.1"
subxt = { version = "0.38.1", features = ["native", "reconnecting-rpc-client"] }
subxt-signer = "0.38.1"
backoff = { version = "0.4.0", default-features = false, features = ["tokio"] }
backon = "1.3.0"
tokio = { version = "1.43.0", features = [
    "rt",
    "macros",
    "rt-multi-thread",
    "signal",
] }
graphql_client = "0.14.0"
reqwest = { version = "0.12.12", features = ["json"]  }
serde = { version = "1.0.217", default-features = false, features = ["derive"]}
serde_json = "1.0.138"
hex = "0.4.3"
tracing-subscriber = "0.3.19"
config = "0.15.7"
sp-core = { version = "35.0.0", default-features = false, features = [
    "std",
] }
bip39 = { version = "2.1.0", features = ["rand"] }
lru = "0.13.0"