[package]
name = "wallet_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# Local is to disable the `CheckTxVersion` from the extra data for signing.
# This is because the efinity-standalone version doesn't use it while the normal does use it.
# The open platform currently isn't compatible with the standalone version so this flag won't be used unless you mock the api.
local = []

[dependencies]
tracing = "0.1.32"
serde = { version = "1.0", default-features = false }
codec = { package = 'parity-scale-codec', version = "3.0.0", default-features = false, features = [
    "derive",
    "full",
    "bit-vec",
] }
tokio = { version = "1.28.0", default-features = false, features = [
    "rt",
    "macros",
    "rt-multi-thread",
    "signal",
] }
hyper = { version = "0.14", default-features = false }
futures-util = { version = "0.3", default-features = false }
futures = "0.3"
http = "0.2"
config = "0.13"
serde_json = "1.0"
hex = "0.4"
thiserror = "1.0.30"
graphql_client = "0.10.0"
reqwest = { version = "0.11.6", default-features = false, features = [
    "json",
    "default-tls",
] }
async-trait = { version = "0.1" }
backoff = { version = "0.4", default-features = false, features = ["tokio"] }
secrecy = "0.8"

sc-keystore = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-keystore = { version = "0.12.0", git = "https://github.com/paritytech/substrate.git" }
sp-version = { version = "5.0.0", git = "https://github.com/paritytech/substrate.git", default-features = false, features = [
    "std",
] }
sp-core = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", default-features = false, features = [
    "std",
] }
sp-application-crypto = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", default-features = false, features = [
    "std",
    "full_crypto",
] }
libsecp256k1 = { version = "0.7", default-features = false, features = [
    "hmac",
    "static-context",
] }
lru = "0.7.2"

subxt = { git = "https://github.com/leonardocustodio/subxt.git" }
scale-info = { version = "2.0.0", features = ["bit-vec"] }
derivative = "2.2.0"

rusoto_kms = "0.47"
rusoto_core = "0.47"

[dev-dependencies]
sp-keyring = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git" }
serial_test = "0.6"
tracing-subscriber = "0.3"
